crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__subscript_recovery_8.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"[][][]\"#)"
---
Node {
    node: Subscript(
        Subscript {
            value: Node {
                node: Subscript(
                    Subscript {
                        value: Node {
                            node: List(
                                ListExpr {
                                    elts: [],
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 2,
                        },
                        index: None,
                        lower: None,
                        upper: None,
                        step: None,
                        ctx: Load,
                        has_question: false,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 4,
            },
            index: None,
            lower: None,
            upper: None,
            step: None,
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}
