crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__type_alias_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"type pkg_path.\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: TypeAlias(
                TypeAliasStmt {
                    type_name: Node {
                        node: Identifier {
                            names: [
                                Node {
                                    node: "pkg_path",
                                    filename: "",
                                    line: 1,
                                    column: 5,
                                    end_line: 1,
                                    end_column: 13,
                                },
                                Node {
                                    node: "",
                                    filename: "",
                                    line: 1,
                                    column: 14,
                                    end_line: 1,
                                    end_column: 14,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                        filename: "",
                        line: 1,
                        column: 5,
                        end_line: 1,
                        end_column: 14,
                    },
                    type_value: Node {
                        node: "any",
                        filename: "",
                        line: 1,
                        column: 14,
                        end_line: 1,
                        end_column: 14,
                    },
                    ty: Node {
                        node: Any,
                        filename: "",
                        line: 1,
                        column: 14,
                        end_line: 1,
                        end_column: 14,
                    },
                },
            ),
            filename: "",
            line: 1,
            column: 5,
            end_line: 1,
            end_column: 14,
        },
    ],
    comments: [],
}
